# DE_Mini_Project_Seven

./: .gitignore  MANIFEST.in  Makefile  Test_Log.md  User Manual.md  pyproject.toml  test_main.py
src/sqlite_etl_mini_project/: main.py
src/sqlite_etl_mini_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sqlite_etl_mini_project/data/: air_quality.db
src/sqlite_etl_mini_project/my_lib/: crud.py  extract.py  transform.py  util.py
