[build-system]
requires = [
    "setuptools >= 65"
]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite_etl_mini_project"
description = "A Duke MSc Data Science, Data Engineering Mini project to package a python project."
version = "2024.1.0"
# dynamic = ["version"]
readme = "README.md"
dependencies = [
  "requests==2.32.3"
]
requires-python = ">=3.8"
authors = [
  {name = "Leonard Eshun", email = "leonard.eshun@duke.edu"},
]
keywords = ["sqlite", "duke", "data engineering", "data science", "setuptools"]
classifiers = [
    "Development Status :: 4 - Beta", 
    "Intended Audience :: Students",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["black==22.3.0",
  "pytest==7.4.0",
  "ruff==0.6.5"
]

[project.urls]
Repository = "https://github.com/nogibjj/Leonard_Eshun_Mini_Project_Seven"

[project.scripts]
sqlite_etl = "sqlite_etl_mini_project.main:main"